fixed spacing in project gallery boxes

--- a/style/index.css
+++ b/style/index.css
@@ -135,7 +135,7 @@ section.gallery .gallery-box {
     background: white;
     width: 270px;
     height: 220px;
-    margin: 1%;
+    margin: 5% 1% 2%;
 }
 
 div.project-title p {
